Переносит все миксины в папку mixins, миксины не использующие функций миксина переведены в простые компоненты, добавлено перечисление SiteUrl, переделаны условия (в усвловиях осталось только то, что их касается)

--- a/source/pug/base/footer.pug
+++ b/source/pug/base/footer.pug
@@ -1,2 +1,3 @@
-mixin footer(footerMod)
-  footer.footer(class= footerMod && "footer--" + footerMod)
+- var footerModClass = footerMod && "footer--" + footerMod
+
+footer.footer(class= footerModClass)
