--- a/source/pug/pages/components.pug
+++ b/source/pug/pages/components.pug
@@ -3,13 +3,8 @@ extends ../base/layout
 block data
 
 block variables
-  - var title = "Компоненты"
-  - var wrapperMod = ""
-  - var hasHeader = true
-  - var headerMod = ""
-  - var hasFooter = true
-  - var footerMod = ""
-  - var currentPage = ""
+  - title = "Компоненты"
+  - currentPage = SiteUrl.COMPONENTS
 
 block main
   style.
