--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -1,7 +1,10 @@
 extends ../base/layout
 
 block variables
-  - var title = "Оглавление"
+  - title = "Оглавление"
+  - hasHeader = false
+  - hasFooter = false
+  - currentPage = SiteUrl.INDEX
 
 block main
   style.
