Исправляет условие появления footer

--- a/source/pug/mixins/basic/footer.pug
+++ b/source/pug/mixins/basic/footer.pug
@@ -1,4 +1,4 @@
 mixin footer(footerMod)
-  if (hasHeader)
+  if (hasFooter)
     include ../../base/footer
     //-footer.footer(class= footerMod && "footer--" + footerMod)
